--- a/microapp/src/main/resources/static/css/bootstrap.css
+++ b/microapp/src/main/resources/static/css/bootstrap.css
@@ -65,7 +65,7 @@ img {
   width: auto\9;
   /* IE7-8 need help adjusting responsive images */
 
-  height: auto;
+  /*height: auto;*/
   /* Part 2: Scale the height according to the width, otherwise you get stretching */
 
   vertical-align: middle;
